syntax = "proto3";

package config;

service Config {
  rpc ConfigCreate (CreateRequest) returns (CreateReply);
  rpc ConfigList (ListRequest) returns (ListReply);
  rpc ConfigRemove (RemoveRequest) returns (RemoveReply);
}

message CreateRequest {
  string name = 1;
  bytes data = 2;
}

message CreateReply {
  string id = 1;
}

message ListRequest {
}

message ConfigEntry {
  string id = 1;
  string name = 2;
}

message ListReply {
  repeated ConfigEntry entries = 1;
}

message RemoveRequest {
  string id = 1;
}

message RemoveReply {
  string id = 1;
}
